# signal-deck

./: .gitattributes  .gitignore  LICENSE  README.md
backend/: README.md  main.py  pyproject.toml
backend/routes/: weather.py
backend/services/: weather.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: DailyForecast.tsx  HourlyChart.tsx  WeatherHeader.tsx  WeatherTabs.tsx  weatherIcons.ts
frontend/src/styles/: weather.css
infra/: README.md  compute.tf  iam.tf  networking.tf  provider.tf  variables.tf
